--- a/saving/Makefile
+++ b/saving/Makefile
@@ -13,7 +13,7 @@ SRC = $(addprefix $(SRC_PATH),$(SRC_NAME))
 OBJ = $(addprefix $(OBJ_PATH),$(OBJ_NAME))
 CC = gcc
 CFLAGS = -g -Wall -Werror -Wextra
-FFLAGS = -framework AppKit -framework OpenGL -L. -Llibft -lft -lmlx -Lmlx
+FFLAGS = -framework AppKit -framework OpenGL -L. -Llibft -lft -lmlx -Lmlx -lpthread
 
 all: $(OBJ) $(FT_LIB) $(NAME)
 
