--- a/saving/Makefile
+++ b/saving/Makefile
@@ -14,12 +14,15 @@ OBJ = $(addprefix $(OBJ_PATH),$(OBJ_NAME))
 CC = gcc
 CFLAGS = -g -Wall -Werror -Wextra
 FFLAGS = -framework AppKit -framework OpenGL -L. -Llibft -lft -lmlx -Lmlx -lpthread
+ASAN := -O1 -g -fsanitize=address   \
+	-fno-omit-frame-pointer \
+	-fsanitize-address-use-after-scope \
 
 all: $(OBJ) $(FT_LIB) $(NAME)
 
 $(NAME): $(OBJ)
 	@echo "\033[33m >>> \033[32mCOMPILING \033[36;4m\"$(NAME)\"\033[0m \033[32m...\033[33m <<<\033[0m"
-	@$(CC) $(CFLAGS) $(FFLAGS) $(OBJ) -I$(LIB_INC) -I$(INC_PATH) -Imlx -o $@
+	@$(CC) $(ASAN) $(CFLAGS) $(FFLAGS) $(OBJ) -I$(LIB_INC) -I$(INC_PATH) -Imlx -o $@
 
 $(FT_LIB):
 	#clear
@@ -34,7 +37,7 @@ $(OBJ_PATH)%.o: $(SRC_PATH)%.c
 	@mkdir $(OBJ_PATH) 2> /dev/null || echo '' > /dev/null
 	@$(CC) $(CFLAGS) -c $< -I libft/includes -I ./includes -o $@
 	@echo "\033[35m >>> \033[32mCOMPILING \"$<\"..\033[35m <<<\033[0m"
-	
+
 
 clean:
 	@echo "\033[32m >>> [$(NAME)] >>> \033[31m Remove all .o files\033[0m"
@@ -43,8 +46,8 @@ clean:
 	@make -C libft clean
 
 fclean: clean
-		@rm -f $(NAME)
-		@echo "\033[31m >>> \033[33;4m \"$(NAME)\" EXECUTABLE DELETED\033[0m"
+	@rm -f $(NAME)
+	@echo "\033[31m >>> \033[33;4m \"$(NAME)\" EXECUTABLE DELETED\033[0m"
 
 norme :
 	@echo "\033[32m==> norminette : \033[33;4m$(INC_PATH)\033[0m \033[33;4m$(SRC_PATH)\033[0m"
